--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^9.9.0",
+    "nanoid": "^4.0.0",
     "pinia": "^2.0.16",
     "vue": "^3.2.25",
     "vue-router": "^4.1.2"
